added documentation to data modelling, implementation and evaluation

--- a/main.ipynb
+++ b/main.ipynb
@@ -1808,15 +1808,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# DATA MODELLING, IMPLEMENTATION, MODEL EVALUATION\n",
+    "\n",
+    "Create the target column and preprocess features\n",
+    "\n",
+    "1. Create a binary target column has_mental_issue (1 if student has depression, anxiety, or panic attack, else 0).\n",
+    "2. Drop columns with the same value in all rows (low variance).\n",
+    "3. Ensure 'Your current year of Study' is numeric.\n",
+    "Convert 'What is your CGPA?' to a numeric value (midpoint if range).\n",
+    "4. Encode all categorical variables using LabelEncoder.\n",
+    "5. Separate features (X) and target (y), excluding the original mental health columns and the target column.\n",
+    "6. Impute missing values in features using the most frequent value.\n",
+    "7. Split the data into training and testing sets (80/20 split).\n",
+    "Save label encoders and imputer for future use."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1843,7 @@
     }
    ],
    "source": [
-    "# Step 2: Create the target column\n",
+    "# Step 1: Create the target column\n",
     "df[\"has_mental_issue\"] = (\n",
     "    (df[\"Do you have Depression?\"] == \"Yes\")\n",
     "    | (df[\"Do you have Anxiety?\"] == \"Yes\")\n",
@@ -1840,10 +1852,10 @@
     "    int\n",
     ")  # 1 = has issue, 0 = no issue\n",
     "\n",
-    "# Step 3: Drop columns with the same value in all rows\n",
+    "# Step 2: Drop columns with the same value in all rows\n",
     "df = df.loc[:, df.nunique() > 1]\n",
     "\n",
-    "# Step 4: Preprocess specific columns\n",
+    "# Step 3: Preprocess specific columns\n",
     "# Convert 'Your current year of Study' to numeric\n",
     "df[\"Your current year of Study\"] = (\n",
     "    df[\"Your current year of Study\"].astype(str).str.extract(\"(\\d+)\").astype(int)\n",
@@ -1866,7 +1878,7 @@
     "\n",
     "df[\"What is your CGPA?\"] = df[\"What is your CGPA?\"].apply(convert_cgpa)\n",
     "\n",
-    "# Step 5: Encode categorical variables\n",
+    "# Step 4: Encode categorical variables\n",
     "label_encoders = {}\n",
     "for column in df.select_dtypes(include=\"object\").columns:\n",
     "    df[column] = df[column].astype(str)  # ensure consistent type\n",
@@ -1874,7 +1886,7 @@
     "    df[column] = le.fit_transform(df[column])\n",
     "    label_encoders[column] = le\n",
     "\n",
-    "# Step 6: Separate features and target\n",
+    "# Step 5: Separate features and target\n",
     "# Exclude the three columns used to create the target\n",
     "columns_to_exclude = [\n",
     "    \"Do you have Depression?\",\n",
@@ -1884,11 +1896,11 @@
     "X = df.drop(columns=columns_to_exclude + [\"has_mental_issue\"], axis=1)\n",
     "y = df[\"has_mental_issue\"]\n",
     "\n",
-    "# Step 7: Impute missing values\n",
+    "# Step 6: Impute missing values\n",
     "imputer = SimpleImputer(strategy=\"most_frequent\")\n",
     "X_imputed = imputer.fit_transform(X)\n",
     "\n",
-    "# Step 8: Train-test split\n",
+    "# Step 7: Train-test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X_imputed, y, test_size=0.2, random_state=42\n",
     ")\n",
@@ -1896,6 +1908,19 @@
     "# Save preprocessing artifacts\n",
     "joblib.dump(label_encoders, \"label_encoders.pkl\")\n",
     "joblib.dump(imputer, \"imputer.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train and evaluate Logistic Regression\n",
+    "\n",
+    "1. Train a Logistic Regression model on the training data.\n",
+    "2. Print classification report (precision, recall, f1-score, support).\n",
+    "3. Print and plot the confusion matrix.\n",
+    "4. Print the accuracy score.\n",
+    "5. Save the trained Logistic Regression model.\n"
    ]
   },
   {
@@ -1984,8 +2009,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train and evaluate Decision Tree\n",
+    "\n",
+    "1. Train a Decision Tree classifier on the training data.\n",
+    "2. Print classification report.\n",
+    "3. Print and plot the confusion matrix.\n",
+    "4. Print the accuracy score.\n",
+    "5. Save the trained Decision Tree model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2029,11 +2067,11 @@
    "source": [
     "\n",
     "\n",
-    "# Step 9: Train Decision Tree model\n",
+    "# Step 1: Train Decision Tree model\n",
     "decision_tree = DecisionTreeClassifier(random_state=42)\n",
     "decision_tree.fit(X_train, y_train)\n",
     "\n",
-    "# Step 10: Evaluation\n",
+    "# Step 2: Evaluation\n",
     "y_pred_dt = decision_tree.predict(X_test)\n",
     "\n",
     "# Classification Report\n",
@@ -2070,8 +2108,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train and evaluate Random Forest\n",
+    "\n",
+    "1. Train a Random Forest classifier on the training data.\n",
+    "2. Print classification report.\n",
+    "3. Print and plot the confusion matrix.\n",
+    "4. Print the accuracy score.\n",
+    "5. Save the trained Random Forest model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2114,11 +2165,11 @@
    ],
    "source": [
     "\n",
-    "# Step 9: Train Random Forest model\n",
+    "# Step 1: Train Random Forest model\n",
     "random_forest = RandomForestClassifier(random_state=42)\n",
     "random_forest.fit(X_train, y_train)\n",
     "\n",
-    "# Step 10: Evaluation\n",
+    "# Step 2: Evaluation\n",
     "y_pred_rf = random_forest.predict(X_test)\n",
     "\n",
     "# Classification Report\n",
@@ -2156,6 +2207,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the imputer and all label encoders to disk for future inference or deployment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -2178,6 +2236,13 @@
     "joblib.dump(label_encoders, \"label_encoders.pkl\")\n",
     "\n",
     "print(\"✅ All models, imputer, and encoders saved.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the list of feature names used for model training (for reference or debugging)."
    ]
   },
   {
